syntax = "proto3";
package topo;

message Node {
  string name = 1; string host = 2; int32 port = 3;
  bool is_leader = 4; bool is_team_leader = 5; string team = 6;
  repeated string neighbors = 7; int32 max_inflight = 8;
}
message Topology { repeated Node nodes = 1; }
